@@ -1,5 +1,9 @@
 $Id$
 
+2016-02-15  Alex Samorukov  <samm@os2.kiev.ua>
+
+	drivedb.h: APPLE SSD TS064E (ticket #655)
+
 2016-02-02  Douglas Gilbert  <dgilbert@interlog.com>
 
 	scsiprint.cpp: output unavailable rather than 255C for Drive
